syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.survey";
option java_multiple_files = true;

package responses;

message LongSurveyResponse {
  string shortSummary = 1;
  string fullSummary = 2;
}
